--- a/.env
+++ b/.env
@@ -1,13 +1,14 @@
 VITE_BASE_PATH="/revisit_test/"
 VITE_FIREBASE_CONFIG='
 {
-  apiKey: "AIzaSyAm9QtUgx1lYPDeE0vKLN-lK17WfUGVkLo",
-  authDomain: "revisit-utah.firebaseapp.com",
-  projectId: "revisit-utah",
-  storageBucket: "revisit-utah.appspot.com",
-  messagingSenderId: "811568460432",
-  appId: "1:811568460432:web:995f6b4f1fc8042b5dde15"
+  apiKey: "AIzaSyCk0wUrJiezmmqwguK3vDJ1r0HUoUPLbuc",
+  authDomain: "visualization-folksonomy.firebaseapp.com",
+  projectId: "visualization-folksonomy",
+  storageBucket: "visualization-folksonomy.appspot.com",
+  messagingSenderId: "583414629987",
+  appId: "1:583414629987:web:9fe4cd73439af0bc9eda56",
+  measurementId: "G-02WX85RSSH"
 }
 '
-VITE_STORAGE_ENGINE="localStorage" # "firebase" or "localStorage" or your own custom storage engine
-VITE_RECAPTCHAV3TOKEN="6LdjOd0lAAAAAASvFfDZFWgtbzFSS9Y3so8rHJth" # recaptcha SITE KEY
+VITE_STORAGE_ENGINE="firebase" # "firebase" or "localStorage" or your own custom storage engine
+VITE_RECAPTCHAV3TOKEN="6Ld6pCwqAAAAADKq1ttCVyYq4EUN_xc8XhF8GUiO" # recaptcha SITE KEY
