--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-router-dom": "^6.23.1",
     "react-vega": "^7.6.0",
     "rehype-raw": "^7.0.0",
+    "rsuite": "^5.69.0",
     "ts-json-schema-generator": "^2.3.0",
     "typedoc": "^0.25.13",
     "typedoc-plugin-frontmatter": "^1.0.0",
@@ -73,6 +74,7 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "husky": "^9.0.11",
+    "less": "^4.2.0",
     "lint-staged": "^15.2.7",
     "typescript": "^5.4.5",
     "vite": "^5.2.13"
